# downmem

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README  README.md  dmm_common.h  downmem.h  dpu.h  dpu_error.h  install.md  interleaveAnalytical-mramxfer.c  interleaveLut-mramxfer.c  mramTiming.c  processor.c  program.c  runTests.sh  rvRunTests.sh  timing.c  ummHostApi.c  ummRunTests.sh  upmemLut-mramxfer.c  wramxfer.c
cinm-app-example-rv-mlp/: CMakeLists.txt  mlphost.c  rvMLP.sh
cinm-app-example-rv-mlp/devApp/: CMakeLists.txt  mlp.dpu.c
cinm-app-example-rv-mv/: CMakeLists.txt  mvhost.c  rvMV.sh
cinm-app-example-rv-mv/devApp/: CMakeLists.txt  mv.dpu.c
cinm-app-example-rv-va/: CMakeLists.txt  rvVA.sh  vahost.c
cinm-app-example-rv-va/devApp/: CMakeLists.txt  va.dpu.c  va.dpu.c.back
cinm-app-example-umm-mlp/: CMakeLists.txt  build.sh  mlphost.c
cinm-app-example-umm-mlp/devApp/: mlp.dpu.c
cinm-app-example-umm-mv/: CMakeLists.txt  build.sh  mvhost.c  mvhost.c.back  setup_env.sh
cinm-app-example-umm-mv/devApp/: mv.dpu.c
cinm-app-example-umm-va/: CMakeLists.txt  build.sh  setup_env.sh  vahost.c
cmake/: DmmConfig.cmake.in  DmmDeviceHelpers.cmake  both-toolchainbuild.sh  dpu-rt.tar.zst  rv-toolchainbuild.sh  rvupmem-llvm.patch  rvupmem-llvm15.patch  rvupmem-llvm20.patch  rvupmem-toolchainbuild.sh  upmem-llvm.patch.zst  upmem-toolchainbuild.sh
devApp/: BFS.c  BS.c  CMakeLists.txt  COMPACT.c  DUMMY.c  GEMV.c  HST-L.c  HST-S.c  HST.c  HSTS.c  MLP.c  NW.c  OPDEMO.c  OPDEMOF.c  RED.c  SCAN-RSS.c  SCAN-SSA.c  SCAN.c  SCANSSA.c  SEL.c  SPMV.c  TRNS.c  TS.c  UNI.c  VA-SIMPLE.c  VA.c  moredefs.h
devApp/highlight/: alloc.h  device_include.h
dmm-app-boilerplate/: .clangd  build.sh
dmm-app-example/: CMakeLists.txt  build.sh  myhost1.c  myhost2.c
dmm-app-example/devApp/: mydev1.c  mydev2.c
hostApp/: BS.c  COMPACT.c  GEMV.c  HST-L.c  HST-S.c  HST.c  MLP.c  NW.c  OPDEMO.c  OPDEMOF.c  RED.c  SCAN-RSS.c  SCAN-SSA.c  SCAN.c  SEL.c  SPMV.c  TRNS.c  TS.c  UNI.c  VA-SIMPLE.c  VA.c  XFERBENCH.c
hostApp/BFS/: cpubfs.c  dpubfsHost.c  main.c  simpleBFS.h
rvisa/: dmminternal.h  downmem.h  lookupTbls.c  processor.c  program.c  timing.c
rvisa/ummrv-rt/: CMakeLists.txt  alloc.c  alloc.h  barrier.c  barrier.h  crt0.S  device.ld  handshake.c  handshake.h  memcpy.c  memmove.c  memxxx.c  mutex.c  mutex.h  rand_r.c  semaphore.c  semaphore.h  stdlib.h  string.h  syslib.h
thrdUnsafeHash/: slicehash.c
upmemisa/: dmminternal.h  downmem.h  lookupTbls.c  processor.c  program.c  timing.c
